--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,8 @@ body {
 .logo {
   font-family: "DM Serif Display", serif;
   color: white;
-  font-size: 8rem;
+  display: flex;
+  max-width: 630px !important;
   letter-spacing: 0.5rem;
   padding: 0;
   margin: 0;
@@ -97,6 +98,7 @@ body {
   background-size: contain;
   background-image: url("/images/wawa.svg");
   animation: rotate 10s linear infinite;
+  z-index: -1;
 }
 
 .intro--disappear .spinner {
@@ -176,6 +178,7 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   opacity: 0;
@@ -189,6 +192,14 @@ body {
 .outro__text {
   font-family: "Inter", sans-serif;
   font-size: 1.5rem;
+  color: white;
+}
+
+.outro__button {
+  font-family: "Inter", sans-serif;
+}
+
+.outro__button:hover {
   color: white;
 }
 
