--- a/src/index.css
+++ b/src/index.css
@@ -84,12 +84,13 @@ body {
 
 .spinner {
   position: absolute;
-  right: 0px;
-  top: 0px;
-  margin-right: -42px;
-  margin-top: -42px;
+  right: -55px;
+  top: -45px;
+  /* margin-right: -42px;
+  margin-top: -42px; */
   animation: fadeIn 2.4s ease-in-out 1.2s forwards;
   opacity: 0;
+  margin: 0;
 }
 
 .spinner__image {
@@ -99,6 +100,8 @@ body {
   background-image: url("/images/wawa.svg");
   animation: rotate 10s linear infinite;
   z-index: -1;
+  overflow: hidden;
+  margin: 0;
 }
 
 .intro--disappear .spinner {
